--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -1,27 +1,31 @@
-<h1>Password Generator</h1>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-<a href="{% url 'about' %}">About</a>
+<div class="container text-center">
+    <h1>Password Generator</h1>
 
+    <a href="{% url 'about' %}">About</a>
 
-<form action="{% url 'password' %}">  <!--Means we want to go to the 'password' view-->
-    <br>
-    <select name="length">
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-        <option value="9">9</option>
-        <option value="10">10</option>
-        <option value="11">11</option>
-        <option value="12" selected="selected">12</option>
-        <option value="13">13</option>
-        <option value="14">14</option>
-    </select>
-    <br>
-    <input type="checkbox" name="uppercase"> Uppercase
-    <br>
-    <input type="checkbox" name="numbers"> Numbers
-    <br>
-    <input type="checkbox" name="special"> Special Characters
-    <br>
-    <input type="submit" value="Generator Password">
-</form>
+    <form action="{% url 'password' %}">  <!--Means we want to go to the 'password' view-->
+        <br>
+        <select name="length">
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+            <option value="11">11</option>
+            <option value="12" selected="selected">12</option>
+            <option value="13">13</option>
+            <option value="14">14</option>
+        </select> Length
+        <br>
+        <input type="checkbox" name="uppercase"> Uppercase
+        <br>
+        <input type="checkbox" name="numbers"> Numbers
+        <br>
+        <input type="checkbox" name="special"> Special Characters
+        <br>
+        <input type="submit" value="Generate Password" class="btn btn-primary">
+    </form>
+</div>
