--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -1,3 +1,8 @@
-<h1>Your password is :</h1>
-<h2>{{ password }}</h2>
-<a href="{% url 'home' %}">Go Back Home</a>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+<div class="container text-center">
+    <h1>Your password is :</h1>
+    <h2 class="alert alert-success">{{ password }}</h2>
+    <a href="{% url 'home' %}" class="btn btn-warning">Go Back Home</a>
+</div>
